--- a/.prow/verify.yaml
+++ b/.prow/verify.yaml
@@ -65,7 +65,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: quay.io/kubermatic/wwhrd:0.4.0-2
+        - image: quay.io/kubermatic/build:go-1.19-node-18-kind-0.14-0
           command:
             - make
           args:
