Add tests for 1.25 and update other tests
Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/test/tests.yml
+++ b/test/tests.yml
@@ -1,5 +1,5 @@
 - scenario: install_containerd
-  initVersion: v1.22.12
+  initVersion: v1.22.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -23,7 +23,7 @@
     - name: vsphere_flatcar
 
 - scenario: install_containerd
-  initVersion: v1.23.9
+  initVersion: v1.23.13
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -47,7 +47,31 @@
     - name: vsphere_flatcar
 
 - scenario: install_containerd
-  initVersion: v1.24.3
+  initVersion: v1.24.7
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
+    - name: aws_default
+      alwaysRun: true
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: gce_default
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: vsphere_default
+    - name: vsphere_flatcar
+
+- scenario: install_containerd
+  initVersion: v1.25.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -71,7 +95,7 @@
     - name: vsphere_flatcar
 
 - scenario: install_docker
-  initVersion: v1.22.12
+  initVersion: v1.22.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -94,7 +118,7 @@
     - name: vsphere_flatcar
 
 - scenario: install_docker
-  initVersion: v1.23.9
+  initVersion: v1.23.13
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -117,8 +141,8 @@
     - name: vsphere_flatcar
 
 - scenario: upgrade_containerd
-  initVersion: v1.23.9
-  upgradedVersion: v1.24.3
+  initVersion: v1.24.7
+  upgradedVersion: v1.25.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -141,8 +165,8 @@
     - name: vsphere_flatcar
 
 - scenario: upgrade_containerd
-  initVersion: v1.22.12
-  upgradedVersion: v1.23.9
+  initVersion: v1.23.13
+  upgradedVersion: v1.24.7
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -165,8 +189,8 @@
     - name: vsphere_flatcar
 
 - scenario: upgrade_containerd
-  initVersion: v1.21.14
-  upgradedVersion: v1.22.12
+  initVersion: v1.22.15
+  upgradedVersion: v1.23.13
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -189,32 +213,8 @@
     - name: vsphere_flatcar
 
 - scenario: upgrade_docker
-  initVersion: v1.22.12
-  upgradedVersion: v1.23.9
-  infrastructures:
-    - name: aws_amzn
-    - name: aws_centos
-    - name: aws_default
-    - name: aws_flatcar
-    - name: aws_rhel
-    - name: aws_rockylinux
-    - name: azure_default
-    - name: azure_centos
-    - name: azure_flatcar
-    - name: azure_rhel
-    - name: azure_rockylinux
-    - name: gce_default
-    - name: openstack_default
-    - name: openstack_centos
-    - name: openstack_rockylinux
-    - name: openstack_rhel
-    - name: openstack_flatcar
-    - name: vsphere_default
-    - name: vsphere_flatcar
-
-- scenario: upgrade_docker
-  initVersion: v1.21.14
-  upgradedVersion: v1.22.12
+  initVersion: v1.22.15
+  upgradedVersion: v1.23.13
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -237,7 +237,7 @@
     - name: vsphere_flatcar
 
 - scenario: calico_containerd
-  initVersion: v1.22.12
+  initVersion: v1.25.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -260,7 +260,7 @@
     - name: vsphere_flatcar
 
 - scenario: calico_docker
-  initVersion: v1.22.12
+  initVersion: v1.22.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -283,7 +283,7 @@
     - name: vsphere_flatcar
 
 - scenario: weave_containerd
-  initVersion: v1.22.12
+  initVersion: v1.25.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -306,7 +306,7 @@
     - name: vsphere_flatcar
 
 - scenario: weave_docker
-  initVersion: v1.22.12
+  initVersion: v1.22.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -329,7 +329,7 @@
     - name: vsphere_flatcar
 
 - scenario: cilium_containerd
-  initVersion: v1.22.12
+  initVersion: v1.25.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -352,7 +352,7 @@
     - name: vsphere_flatcar
 
 - scenario: cilium_docker
-  initVersion: v1.22.12
+  initVersion: v1.22.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -375,47 +375,52 @@
     - name: vsphere_flatcar
 
 - scenario: conformance_containerd
-  initVersion: v1.22.12
+  initVersion: v1.22.15
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: conformance_containerd
-  initVersion: v1.23.9
+  initVersion: v1.23.13
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: conformance_containerd
-  initVersion: v1.24.3
+  initVersion: v1.24.7
+  infrastructures:
+    - name: aws_long_timeout_default
+
+- scenario: conformance_containerd
+  initVersion: v1.25.3
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: conformance_containerd_external
-  initVersion: v1.22.12
+  initVersion: v1.22.15
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: conformance_containerd_external
-  initVersion: v1.23.9
+  initVersion: v1.23.13
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: conformance_containerd_external
-  initVersion: v1.24.3
+  initVersion: v1.24.7
+  infrastructures:
+    - name: aws_long_timeout_default
+
+- scenario: conformance_containerd_external
+  initVersion: v1.25.3
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: kube_proxy_ipvs
-  initVersion: v1.22.12
-  infrastructures:
-    - name: aws_default
-
-- scenario: kube_proxy_ipvs
-  initVersion: v1.23.9
+  initVersion: v1.25.3
   infrastructures:
     - name: aws_default
 
 - scenario: legacy_machine_controller_containerd
-  initVersion: v1.22.12
+  initVersion: v1.22.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -438,7 +443,7 @@
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_containerd
-  initVersion: v1.23.9
+  initVersion: v1.23.13
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -461,7 +466,30 @@
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_containerd
-  initVersion: v1.24.3
+  initVersion: v1.24.7
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
+    - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: gce_default
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: vsphere_default
+    - name: vsphere_flatcar
+
+- scenario: legacy_machine_controller_containerd
+  initVersion: v1.25.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -484,7 +512,7 @@
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_docker
-  initVersion: v1.22.12
+  initVersion: v1.22.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -507,7 +535,7 @@
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_docker
-  initVersion: v1.23.9
+  initVersion: v1.23.13
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -529,15 +557,44 @@
     - name: vsphere_default
     - name: vsphere_flatcar
 
-- scenario: kube_proxy_ipvs
-  initVersion: v1.24.3
+- scenario: csi_ccm_migration
+  initVersion: v1.22.15
+  infrastructures:
+    - name: aws_default  
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: vsphere_default
+    - name: vsphere_flatcar
+
+- scenario: csi_ccm_migration
+  initVersion: v1.23.13
+  infrastructures:
+    - name: aws_default  
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: vsphere_default
+    - name: vsphere_flatcar
+
+- scenario: csi_ccm_migration
+  initVersion: v1.24.7
   infrastructures:
     - name: aws_default
-
-- scenario: csi_ccm_migration
-  initVersion: v1.22.12
-  infrastructures:
-    - name: aws_default  
     - name: openstack_default
     - name: openstack_centos
     - name: openstack_rockylinux
@@ -552,24 +609,7 @@
     - name: vsphere_flatcar
 
 - scenario: csi_ccm_migration
-  initVersion: v1.23.9
-  infrastructures:
-    - name: aws_default  
-    - name: openstack_default
-    - name: openstack_centos
-    - name: openstack_rockylinux
-    - name: openstack_rhel
-    - name: openstack_flatcar
-    - name: azure_default
-    - name: azure_centos
-    - name: azure_flatcar
-    - name: azure_rhel
-    - name: azure_rockylinux
-    - name: vsphere_default
-    - name: vsphere_flatcar
-
-- scenario: csi_ccm_migration
-  initVersion: v1.24.3
+  initVersion: v1.25.3
   infrastructures:
     - name: aws_default
     - name: openstack_default
@@ -586,7 +626,7 @@
     - name: vsphere_flatcar
 
 - scenario: install_containerd_external
-  initVersion: v1.22.12
+  initVersion: v1.22.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -618,7 +658,7 @@
     - name: vsphere_flatcar
 
 - scenario: install_containerd_external
-  initVersion: v1.23.9
+  initVersion: v1.23.13
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -650,7 +690,39 @@
     - name: vsphere_flatcar
 
 - scenario: install_containerd_external
-  initVersion: v1.24.3
+  initVersion: v1.24.7
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
+    - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_default
+    - name: digitalocean_centos
+    - name: digitalocean_rockylinux
+    - name: equinixmetal_default
+    - name: equinixmetal_centos
+    - name: equinixmetal_rockylinux
+    - name: equinixmetal_flatcar
+    - name: hetzner_default
+    - name: hetzner_centos
+    - name: hetzner_rockylinux
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: vsphere_default
+    - name: vsphere_flatcar
+
+- scenario: install_containerd_external
+  initVersion: v1.25.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -682,7 +754,7 @@
     - name: vsphere_flatcar
 
 - scenario: install_docker_external
-  initVersion: v1.22.12
+  initVersion: v1.22.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -714,7 +786,7 @@
     - name: vsphere_flatcar
 
 - scenario: install_docker_external
-  initVersion: v1.23.9
+  initVersion: v1.23.13
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -746,8 +818,8 @@
     - name: vsphere_flatcar
 
 - scenario: upgrade_containerd_external
-  initVersion: v1.21.14
-  upgradedVersion: v1.22.12
+  initVersion: v1.22.15
+  upgradedVersion: v1.23.13
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -779,8 +851,8 @@
     - name: vsphere_flatcar
 
 - scenario: upgrade_containerd_external
-  initVersion: v1.22.12
-  upgradedVersion: v1.23.9
+  initVersion: v1.23.13
+  upgradedVersion: v1.24.7
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -812,8 +884,8 @@
     - name: vsphere_flatcar
 
 - scenario: upgrade_containerd_external
-  initVersion: v1.23.9
-  upgradedVersion: v1.24.3
+  initVersion: v1.24.7
+  upgradedVersion: v1.25.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -845,41 +917,8 @@
     - name: vsphere_flatcar
 
 - scenario: upgrade_docker_external
-  initVersion: v1.21.14
-  upgradedVersion: v1.22.12
-  infrastructures:
-    - name: aws_amzn
-    - name: aws_centos
-    - name: aws_default
-    - name: aws_flatcar
-    - name: aws_rhel
-    - name: aws_rockylinux
-    - name: azure_default
-    - name: azure_centos
-    - name: azure_flatcar
-    - name: azure_rhel
-    - name: azure_rockylinux
-    - name: digitalocean_default
-    - name: digitalocean_centos
-    - name: digitalocean_rockylinux
-    - name: equinixmetal_default
-    - name: equinixmetal_centos
-    - name: equinixmetal_rockylinux
-    - name: equinixmetal_flatcar
-    - name: hetzner_default
-    - name: hetzner_centos
-    - name: hetzner_rockylinux
-    - name: openstack_default
-    - name: openstack_centos
-    - name: openstack_rockylinux
-    - name: openstack_rhel
-    - name: openstack_flatcar
-    - name: vsphere_default
-    - name: vsphere_flatcar
-
-- scenario: upgrade_docker_external
-  initVersion: v1.22.12
-  upgradedVersion: v1.23.9
+  initVersion: v1.22.15
+  upgradedVersion: v1.23.13
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -911,7 +950,7 @@
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_containerd_external
-  initVersion: v1.22.12
+  initVersion: v1.22.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -943,7 +982,7 @@
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_containerd_external
-  initVersion: v1.23.9
+  initVersion: v1.23.13
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -975,7 +1014,39 @@
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_containerd_external
-  initVersion: v1.24.3
+  initVersion: v1.24.7
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
+    - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_default
+    - name: digitalocean_centos
+    - name: digitalocean_rockylinux
+    - name: equinixmetal_default
+    - name: equinixmetal_centos
+    - name: equinixmetal_rockylinux
+    - name: equinixmetal_flatcar
+    - name: hetzner_default
+    - name: hetzner_centos
+    - name: hetzner_rockylinux
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: vsphere_default
+    - name: vsphere_flatcar
+
+- scenario: legacy_machine_controller_containerd_external
+  initVersion: v1.25.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -1007,7 +1078,7 @@
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_docker_external
-  initVersion: v1.22.12
+  initVersion: v1.22.15
   infrastructures:
     - name: digitalocean_default
     - name: digitalocean_centos
@@ -1021,7 +1092,7 @@
     - name: hetzner_rockylinux
 
 - scenario: legacy_machine_controller_docker_external
-  initVersion: v1.23.9
+  initVersion: v1.23.13
   infrastructures:
     - name: digitalocean_default
     - name: digitalocean_centos
