--- a/addons/csi-aws-ebs/controller.yaml
+++ b/addons/csi-aws-ebs/controller.yaml
@@ -25,6 +25,16 @@ spec:
         node-role.kubernetes.io/control-plane: ""
       serviceAccountName: ebs-csi-controller-sa
       priorityClassName: system-cluster-critical
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - preference:
+              matchExpressions:
+              - key: eks.amazonaws.com/compute-type
+                operator: NotIn
+                values:
+                - fargate
+            weight: 1
       tolerations:
         - key: CriticalAddonsOnly
           operator: Exists
@@ -37,6 +47,11 @@ spec:
         - operator: Exists
           effect: NoExecute
           tolerationSeconds: 300
+      securityContext:
+        fsGroup: 1000
+        runAsGroup: 1000
+        runAsNonRoot: true
+        runAsUser: 1000
       containers:
         - name: ebs-plugin
           image: "{{ .InternalImages.Get "AwsEbsCSI" }}"
@@ -76,6 +91,9 @@ spec:
             timeoutSeconds: 3
             periodSeconds: 10
             failureThreshold: 5
+          securityContext:
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
         - name: csi-provisioner
           image: "{{ .InternalImages.Get "AwsEbsCSIProvisioner" }}"
           imagePullPolicy: IfNotPresent
@@ -92,6 +110,9 @@ spec:
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
+          securityContext:
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
         - name: csi-attacher
           image: "{{ .InternalImages.Get "AwsEbsCSIAttacher" }}"
           imagePullPolicy: IfNotPresent
@@ -105,6 +126,9 @@ spec:
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
+          securityContext:
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
         - name: csi-snapshotter
           image: "{{ .InternalImages.Get "AwsEbsCSISnapshotter" }}"
           imagePullPolicy: IfNotPresent
@@ -117,6 +141,9 @@ spec:
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
+          securityContext:
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
         - name: csi-resizer
           image: "{{ .InternalImages.Get "AwsEbsCSIResizer" }}"
           imagePullPolicy: IfNotPresent
@@ -130,6 +157,9 @@ spec:
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
+          securityContext:
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
         - name: liveness-probe
           image: "{{ .InternalImages.Get "AwsEbsCSILivenessProbe" }}"
           imagePullPolicy: IfNotPresent
@@ -138,6 +168,9 @@ spec:
           volumeMounts:
             - name: socket-dir
               mountPath: /csi
+          securityContext:
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
       volumes:
         - name: socket-dir
           emptyDir: {}
