Machine Controller Addon: add metrics port 8080
Add metrics port (8080/TCP) to Machine Controller addon, so Prometheus ServiceMonitor can be used

Signed-off-by: sphr2k <mail@janwerner.de>

--- a/addons/machinecontroller/deployment-controller.yaml
+++ b/addons/machinecontroller/deployment-controller.yaml
@@ -84,6 +84,9 @@ spec:
 {{ end }}
           ports:
             - containerPort: 8085
+            - containerPort: 8080
+              name: metrics
+              protocol: TCP
           livenessProbe:
             httpGet:
               path: /readyz
