check ipv4 before setting CALICO_IPV4POOL_CIDR

--- a/addons/cni-canal/canal.yaml
+++ b/addons/cni-canal/canal.yaml
@@ -4480,11 +4480,13 @@ spec:
             # No IP address needed.
             - name: IP
               value: ""
+            {{ if .Config.ClusterNetwork.HasIPv4 }}
             # The default IPv4 pool to create on startup if none exists. Pod IPs will be
             # chosen from this range. Changing this value after installation will have
             # no effect. This should fall within `--cluster-cidr`.
             - name: CALICO_IPV4POOL_CIDR
               value: "{{ .Config.ClusterNetwork.PodSubnet }}"
+            {{ end }}
             # Disable file logging so `kubectl logs` works.
             - name: CALICO_DISABLE_FILE_LOGGING
               value: "true"
