Update DigitalOcean CSI to v4.4.1
Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/addons/csi-digitalocean/rbac-snapshot-webhook.yaml
+++ b/addons/csi-digitalocean/rbac-snapshot-webhook.yaml
@@ -4,7 +4,8 @@
 # It should be installed as part of the base Kubernetes distribution in an appropriate
 # namespace for components implementing base system functionality. For installing with
 # Vanilla Kubernetes, kube-system makes sense for the namespace.
-
+#
+# Source: https://github.com/kubernetes-csi/external-snapshotter/blob/v6.1.0/deploy/kubernetes/webhook-example/rbac-snapshot-webhook.yaml
 apiVersion: v1
 kind: ServiceAccount
 metadata:
