remove the empty line to match other if branches
Co-authored-by: Marko Mudrinić <mudrinic.mare@gmail.com>
Signed-off-by: Pratik Deoghare <pratik.deoghare@gmail.com>

--- a/addons/machinecontroller/deployment-controller.yaml
+++ b/addons/machinecontroller/deployment-controller.yaml
@@ -51,7 +51,7 @@ spec:
             - -cluster-dns={{ .Resources.NodeLocalDNSVirtualIP }}
             {{ end -}}
             - -node-csr-approver
-            {{ if .Config.CloudProvider.External }}
+            {{ if .Config.CloudProvider.External -}}
             - -node-external-cloud-provider
             {{ end }}
             - -join-cluster-timeout=15m
