add dualstack support for AWS+Ubuntu+{Canal,Cilium} (#2414)
* add aws dualstack support

* remove ssh hack

* cni config

* gofmt

* validate ipv6 addresses

* rename IPv6Address to IPv6AddressList

* generate deepcopy funcs

* cleanup

* ignore cyclo complexity of NewConfig

* add v1beta1 ClusterNetworkConfig converter

* check len of ipv6 address list

* update apidocs

* cleanup

* rename ipv6_address to ipv6_address_list

* fix json struct tags

* update apidocs

* add cilium dualstack support

* remove unnecessary envoyagent interface filtering

* add info about IPv6AddressList field

* update apidocs

* update docs and security groups

* update docs

* adjust ip families; add node cidr validation

* fix linter errors

* rename ipv6addresslist to ipv6addresses

* update aws-dualstack terraform

* add tests for network config

* update apidocs

* use aws external ccm

* fix templates

* update cni templates

* improve comment on IPAddresses field

Co-authored-by: Marko Mudrinić <mudrinic.mare@gmail.com>
Signed-off-by: Pratik Deoghare <pratik.deoghare@gmail.com>

* remove rudundant flag setting

* describe IPFamily

* refactor network config validation

* update ipv6 cidr calculation

* adjust comments

* update apidocs

* update comments

* fix node-ip setting

* separate ipv4/ipv6 cidrs

* fix defaulting

* ignore empty subnets while joining

* check for IPv4 before setting canal network podcidr

* add -node-external-cloud-provider flag

* check ipv4 before setting CALICO_IPV4POOL_CIDR

* merge IPFamilyIPv4IPv6, IPFamilyIPv6IPv4 cases

* fix subnet ordering

* remove the empty line to match other if branches

Co-authored-by: Marko Mudrinić <mudrinic.mare@gmail.com>
Signed-off-by: Pratik Deoghare <pratik.deoghare@gmail.com>

* mention in the description that this is an IPv6 rule

Co-authored-by: Marko Mudrinić <mudrinic.mare@gmail.com>
Signed-off-by: Pratik Deoghare <pratik.deoghare@gmail.com>

* mention in the description that this is an IPv6 rule

Co-authored-

--- a/addons/calico-vxlan/calico-vxlan.yaml
+++ b/addons/calico-vxlan/calico-vxlan.yaml
@@ -4121,7 +4121,7 @@ rules:
     resources:
       - endpointslices
     verbs:
-      - watch 
+      - watch
       - list
   - apiGroups: [""]
     resources:
@@ -4467,20 +4467,31 @@ spec:
                 configMapKeyRef:
                   name: calico-config
                   key: veth_mtu
+            {{ if .Config.ClusterNetwork.HasIPv4 }}
             # The default IPv4 pool to create on startup if none exists. Pod IPs will be
             # chosen from this range. Changing this value after installation will have
             # no effect. This should fall within `--cluster-cidr`.
             - name: CALICO_IPV4POOL_CIDR
               value: "{{ .Config.ClusterNetwork.PodSubnet }}"
+            {{ end }}
             # Disable file logging so `kubectl logs` works.
             - name: CALICO_DISABLE_FILE_LOGGING
               value: "true"
             # Set Felix endpoint to host default action to ACCEPT.
             - name: FELIX_DEFAULTENDPOINTTOHOSTACTION
               value: "ACCEPT"
+            {{ if .Config.ClusterNetwork.HasIPv6 }}
+            - name: FELIX_IPV6SUPPORT
+              value: "true"
+            - name: IP6
+              value: "autodetect"
+            - name: CALICO_IPV6POOL_CIDR
+              value: "{{ .Config.ClusterNetwork.PodSubnetIPv6 }}"
+            {{ else }}
             # Disable IPv6 on Kubernetes.
             - name: FELIX_IPV6SUPPORT
               value: "false"
+            {{ end }}
             - name: FELIX_HEALTHENABLED
               value: "true"
             - name: FELIX_IPTABLESBACKEND
