--- a/addons/cni-canal/canal.yaml
+++ b/addons/cni-canal/canal.yaml
@@ -41,7 +41,18 @@ data:
           "mtu": __CNI_MTU__,
           "ipam": {
               "type": "host-local",
+              {{ if and .Config.ClusterNetwork.HasIPv4 .Config.ClusterNetwork.HasIPv6 }}
+              "ranges": [
+                  [{"subnet": "usePodCidr"}],
+                  [{"subnet": "usePodCidrIPv6"}]
+              ]
+              {{ else }}
+              {{ if .Config.ClusterNetwork.HasIPv6 }}
+              "subnet": "usePodCidrIPv6"
+              {{ else }}
               "subnet": "usePodCidr"
+              {{ end }}
+              {{ end }}
           },
           "policy": {
               "type": "k8s"
@@ -65,7 +76,13 @@ data:
   # Flannel network configuration. Mounted into the flannel container.
   net-conf.json: |
     {
+      {{ if .Config.ClusterNetwork.HasIPv4 }}
       "Network": "{{ .Config.ClusterNetwork.PodSubnet }}",
+      {{ end }}
+      {{ if .Config.ClusterNetwork.HasIPv6 }}
+      "EnableIPv6": true,
+      "IPv6Network": "{{ .Config.ClusterNetwork.PodSubnetIPv6 }}",
+      {{ end }}
       "Backend": {
         "Type": "vxlan"
       }
@@ -4149,7 +4166,7 @@ rules:
     resources:
       - endpointslices
     verbs:
-      - watch 
+      - watch
       - list
   - apiGroups: [""]
     resources:
@@ -4463,20 +4480,31 @@ spec:
             # No IP address needed.
             - name: IP
               value: ""
+            {{ if .Config.ClusterNetwork.HasIPv4 }}
             # The default IPv4 pool to create on startup if none exists. Pod IPs will be
             # chosen from this range. Changing this value after installation will have
             # no effect. This should fall within `--cluster-cidr`.
             - name: CALICO_IPV4POOL_CIDR
               value: "{{ .Config.ClusterNetwork.PodSubnet }}"
+            {{ end }}
             # Disable file logging so `kubectl logs` works.
             - name: CALICO_DISABLE_FILE_LOGGING
               value: "true"
             # Set Felix endpoint to host default action to ACCEPT.
             - name: FELIX_DEFAULTENDPOINTTOHOSTACTION
               value: "ACCEPT"
+            {{ if .Config.ClusterNetwork.HasIPv6 }}
+            - name: FELIX_IPV6SUPPORT
+              value: "true"
+            - name: IP6
+              value: "autodetect"
+            - name: CALICO_IPV6POOL_CIDR
+              value: "{{ .Config.ClusterNetwork.PodSubnetIPv6 }}"
+            {{ else }}
             # Disable IPv6 on Kubernetes.
             - name: FELIX_IPV6SUPPORT
               value: "false"
+            {{ end }}
             - name: FELIX_HEALTHENABLED
               value: "true"
             - name: FELIX_IPTABLESBACKEND
@@ -4551,9 +4579,16 @@ spec:
                 fieldRef:
                   fieldPath: metadata.namespace
             - name: FLANNELD_IFACE
+              {{ if .Config.ClusterNetwork.HasIPv6 }}
+              valueFrom:
+                configMapKeyRef:
+                  key: canal_iface
+                  name: canal-config
+              {{ else }}
               valueFrom:
                 fieldRef:
                   fieldPath: status.hostIP
+              {{ end }}
             - name: FLANNELD_IP_MASQ
               valueFrom:
                 configMapKeyRef:
