document cloud-config for aws external ccm

--- a/examples/terraform/aws-dualstack/README.md.in
+++ b/examples/terraform/aws-dualstack/README.md.in
@@ -7,3 +7,27 @@ use the configs and how to provision a Kubernetes cluster using KubeOne.
 
 [docs-infrastructure]: https://docs.kubermatic.com/kubeone/main/guides/using-terraform-configs/
 
+## AWS external CCM cloud-config
+KubeOne will use following cloud-config when provisioning the cluster using external AWS CCM.
+You can [override](https://docs.kubermatic.com/kubeone/main/guides/credentials/#cloudconfig) the cloud-config
+but you must specify all the options shown above. Otherwise CCM fails to initialize nodes with proper IP addresses
+and host network pods don't get dualstack IPs.
+
+```
+# IPv6+IPv4
+cloudConfig: |
+  [global]
+  KubernetesClusterID=<<CLUSTER NAME>>
+  NodeIPFamilies="ipv6"
+  NodeIPFamilies="ipv4"
+```
+
+```
+# IPv4+IPv6
+cloudConfig: |
+  [global]
+  KubernetesClusterID=<<CLUSTER NAME>>
+  NodeIPFamilies="ipv4"
+  NodeIPFamilies="ipv6"
+```
+
