add support for AWS x Cilium x IPv6+IPv4 (#2543)
* add support for IPv6+IPv4 family for AWS x Cilium

* update codegen

* validate and default cloud-config for aws ccm

* check if we have any ipv6 addresses

* reduce cyclo complexity

* default cloud-config only for external ccm

* improve error message

Co-authored-by: Marko Mudrinić <mudrinic.mare@gmail.com>
Signed-off-by: Pratik Deoghare <pratik.deoghare@gmail.com>

* add tests validation of provider config

* document cloud-config for aws external ccm

* add docs

* add docs

Signed-off-by: Pratik Deoghare <pratik.deoghare@gmail.com>
Co-authored-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/addons/ccm-aws/ccm-aws.yaml
+++ b/addons/ccm-aws/ccm-aws.yaml
@@ -165,7 +165,17 @@ spec:
             - --cloud-provider=aws
             - --use-service-account-credentials=false
             - --configure-cloud-routes=false
+            - --cloud-config=/etc/kubernetes/cloud/cloud-config
             - --v=2
           resources:
             requests:
               cpu: 200m
+          volumeMounts:
+            - mountPath: /etc/kubernetes/cloud
+              name: cloud-config
+              readOnly: true
+      volumes:
+        - name: cloud-config
+          secret:
+            defaultMode: 420
+            secretName: cloud-config
