Update OSM and MC to latest versions
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/addons/operating-system-manager/deployment-controller.yaml
+++ b/addons/operating-system-manager/deployment-controller.yaml
@@ -54,6 +54,9 @@ spec:
             {{ if .Config.CloudProvider.External }}
             - -external-cloud-provider
             {{ end }}
+            {{ if .Config.CABundle -}}
+            - -ca-bundle={{ .Resources.CABundleSSLCertFilePath }}
+            {{ end -}}
             {{ if .CSIMigrationFeatureGates }}
             - -node-kubelet-feature-gates={{ .CSIMigrationFeatureGates }}
             {{ end }}
