Update images in restic backup
Signed-off-by: Artiom Diomin <kron82@gmail.com>

--- a/addons/backups-restic/backups-restic.yaml
+++ b/addons/backups-restic/backups-restic.yaml
@@ -52,7 +52,7 @@ spec:
               path: /etc/kubernetes/pki
           initContainers:
           - name: snapshoter
-            image: {{ Registry "gcr.io" }}/etcd-development/etcd:v3.4.3
+            image: {{ Registry "registry.k8s.io" }}/etcd:3.5.4-0
             imagePullPolicy: IfNotPresent
             command:
             - /bin/sh
@@ -93,7 +93,7 @@ spec:
               readOnly: true
           containers:
           - name: uploader
-            image: {{ Registry "docker.io" }}/restic/restic:0.9.6
+            image: {{ Registry "docker.io" }}/restic/restic:0.14.0
             imagePullPolicy: IfNotPresent
             command:
             - /bin/sh
