azure CCM: Fix unknown port flag in deployment
Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

--- a/addons/ccm-azure/ccm-azure.yaml
+++ b/addons/ccm-azure/ccm-azure.yaml
@@ -176,7 +176,7 @@ spec:
             - "--leader-elect=true"
             - "--route-reconciliation-period=10s"
             - "--v=4"
-            - "--port=10267"
+            - "--secure-port=10267"
           resources:
             requests:
               cpu: 100m
@@ -188,6 +188,7 @@ spec:
             httpGet:
               path: /healthz
               port: 10267
+              scheme: HTTPS
             initialDelaySeconds: 20
             periodSeconds: 10
             timeoutSeconds: 5
